; ModuleID = '/home/carl/AnghaBench/redis/src/extr_networking.c_addReplyProto.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_networking.c_addReplyProto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addReplyProto(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @prepareClientToWrite(i32* %7)
  %9 = load i64, i64* @C_OK, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %24

12:                                               ; preds = %3
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i64 @_addReplyToBuffer(i32* %13, i8* %14, i64 %15)
  %17 = load i64, i64* @C_OK, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %12
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @_addReplyProtoToList(i32* %20, i8* %21, i64 %22)
  br label %24

24:                                               ; preds = %11, %19, %12
  ret void
}

declare dso_local i64 @prepareClientToWrite(i32*) #1

declare dso_local i64 @_addReplyToBuffer(i32*, i8*, i64) #1

declare dso_local i32 @_addReplyProtoToList(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
